--- a/src/app/components/title-card/title-card.component.css
+++ b/src/app/components/title-card/title-card.component.css
@@ -1,7 +1,7 @@
 .container-title-card{
   color: white;
     padding: 10px;
-    font-size: 125px;
+    font-size: 9vw;
     text-align: center;
     border: 1px solid white;
     margin: 7px 0px;
