--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,20 @@
 <div class="container_page-main">
-  <app-menu-bar></app-menu-bar>
   <app-title-card></app-title-card>
-  <app-great-card></app-great-card>
+  <app-great-card
+    id="1"
+    title="Roock Lee quase leva o farelo"
+    imgCover="https://blacknerdproblems.com/wp-content/uploads/2015/10/3395e1cc-3c72-4430-9a96-f088e5ca4278.jpg"
+    description="Na épica batalha contra Gaara, Rock Lee, mesmo ferido, exibe sua incrível determinação. A intervenção corajosa de Naruto destaca valores de amizade e superação na emocionante história de 'Naruto'..">
+  </app-great-card>
+  <app-great-card
+    id="2"
+    title="O Amor Determinado de Rock Lee: Conquistando o Coração de Sakura"
+    imgCover="https://i.ytimg.com/vi/z-hx9m8fbHk/maxresdefault.jpg"
+    description="Em sua jornada romântica, Rock Lee, conhecido por sua incrível determinação, demonstrou um esforço inabalável ao tentar conquistar o coração de Sakura Haruno. Apesar de suas habilidades limitadas em jutsus, Lee compensou com coragem e dedicação, treinando arduamente para se tornar um ninja melhor e merecer o afeto de Sakura.
+                  Lee mostrou sua determinação inabalável ao enfrentar desafios difíceis para impressionar Sakura. Seus esforços não passaram despercebidos, e houve um momento significativo em que Sakura, com um sorriso caloroso, deu a entender que aceitava Lee como namorado. Esse momento não apenas ressaltou a resiliência de Lee, mas também mostrou a doçura de Sakura ao reconhecer e valorizar o esforço e a devoção sincera de Lee em sua busca pelo amor. Essa história de superação e dedicação de Rock Lee capturou o coração dos fãs, tornando-se um exemplo de determinação e amor verdadeiro em meio ao mundo ninja de Naruto.">
+  </app-great-card>
+  <app-great-card id="3" title="A Determinação Imparável de Rock Lee: Uma Jornada Inspiradora Guiada pelo Amor Paternal"
+    imgCover="https://nerdhits.com.br/wp-content/uploads/2021/07/rock-lee-pai-might-guy-naruto.jpg"
+    description="Na jornada de Rock Lee em 'Naruto', seu pai se destaca como um guia amoroso, ensinando-lhe a valorosa técnica 'Eight Gates'. A dedicação implacável de Lee, inspirada pelo amor paternal, ilustra uma narrativa de superação que ressoa profundamente com os espectadores">
+  </app-great-card>
 </div>
