--- a/src/app/components/great-card/great-card.component.css
+++ b/src/app/components/great-card/great-card.component.css
@@ -1,23 +1,26 @@
 .conatiner_great-card {
   display: flex;
-  border: 1px solid white;
 }
 
 .block-left-card {
   padding: 20px;
-  width: 50vw;
+  width: 54vw;
 }
 
-.block-rigth-card{
-    padding: 20px;
-      width: 50vw;
-  border: 1px solid white;
+.block-rigth-card {
+  padding: 20px;
+  width: 44vw;
 }
 
 .great-card-img > img {
+  border-radius: 7px;
   width: 100%;
 }
 
 .great-card-title {
   margin: 8px 0;
+}
+
+.great-card-description{
+  color: grey;
 }
