--- a/src/app/components/informative-card/informative-card.component.css
+++ b/src/app/components/informative-card/informative-card.component.css
@@ -2,20 +2,21 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  border: 1px solid blue;
   margin-bottom: 10px;
 }
+
 .card_rigth-img {
   margin-right: 5px;
-  width: 30%;
+  width: 43%;
 }
 
-.card_rigth-img>img {
+.card_rigth-img > img {
+  border-radius: 7px;
   width: 100%;
 }
 
 .container_informative-card > h2 > a {
-  font-size: 17px;
+  font-size: 15px;
 }
 
 
