--- a/src/app/components/informative-card/informative-card.component.html
+++ b/src/app/components/informative-card/informative-card.component.html
@@ -1,9 +1,8 @@
 <div class="container_informative-card">
   <div class="card_rigth-img">
     <img
-      src="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q95/wp-content/uploads/2022/02/legiao_JlXCZY6vLN9w.jpg.webp"
+      src={{imgCover}}
       alt="" srcset="">
   </div>
-  <h2 class="card_rigth-title"><a href="#">Rook lee muito da hora</a></h2>
-
+  <h2 class="card_rigth-title"><a [routerLink]="['content', id]">{{title}}</a></h2>
 </div>
