--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,8 @@
 <div class="container_menu-bar">
   <ul>
-    <li><a href="">Linkedin</a></li>
-    <li><a href="">Github</a></li>
+    <li><a href="https://www.linkedin.com/in/daivison-morais-197b9a203/">Linkedin</a></li>
+    <li><a href="https://github.com/Daivison-Morais">Github</a></li>
   </ul>
+  <div class="line"></div>
 </div>
 
