--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -10,5 +10,6 @@
   <div class="content_description">
     <p>{{description}}</p>
   </div>
-  <a [routerLink]="['']">Voltar</a>
+  <a [routerLink]="['']"><div class="buttom-footer">Voltar</div></a>
+
 </div>
