--- a/src/app/components/great-card/great-card.component.html
+++ b/src/app/components/great-card/great-card.component.html
@@ -1,26 +1,15 @@
 <div class="conatiner_great-card">
   <div class="block-left-card">
-    <div class="great-card-img">
-      <img src={{imgCover}} alt="" srcset="">
+    <div class="big_card-left" *ngFor="let l of listIformatives">
+      <div class="great-card-img">
+        <img src={{l.imgCover}} alt="" srcset="">
+      </div>
+      <h1 class="great-card-title"><a [routerLink]="['content', l.id]">{{l.title}}</a></h1>
+      <div class="great-card-description"><a [routerLink]="['content', l.id]">{{l.summary}}</a></div>
     </div>
-    <h1 class="great-card-title"><a [routerLink]="['content', id]">{{title}}</a></h1>
-    <div class="great-card-description"><a [routerLink]="['content', id]">{{description}}</a></div>
   </div>
   <div class="block-rigth-card">
-    <app-informative-card
-      id="1"
-      title="Testano"
-      imgCover="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q95/wp-content/uploads/2022/02/legiao_JlXCZY6vLN9w.jpg.webp">
-    </app-informative-card>
-    <app-informative-card
-      id="2"
-      title="não sei qual é"
-      imgCover="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q95/wp-content/uploads/2022/02/legiao_JlXCZY6vLN9w.jpg.webp">
-    </app-informative-card>
-    <app-informative-card
-      id="3"
-      title="não sei qual é"
-      imgCover="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q95/wp-content/uploads/2022/02/legiao_JlXCZY6vLN9w.jpg.webp">
+    <app-informative-card>
     </app-informative-card>
   </div>
 </div>
