--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,12 +1,17 @@
-
-.container_menu-bar > ul {
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: row;
+.container_menu-bar>ul {
+  display: flex;
+  align-items: center;
+  height: 38px;
+  justify-content: center;
+  flex-direction: row;
 }
 
-.container_menu-bar> ul > li {
-padding: 6px 8px;
-margin-top: 7px;
+.container_menu-bar>ul>li {
+  padding: 6px 12px;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: white;
 }
