--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -1,4 +1,6 @@
 .container_content{
+  scroll-behavior: smooth;
+  overflow: auto;
   padding: 20px;
 }
 
@@ -7,11 +9,30 @@ width: 100%;
 }
 
 .content_img > img {
-  width: 100%;
+width: 100%;
   border-radius: 5px;
 }
 
+.content_cover {
+  padding: 15px 0;
+}
+
 .content_description{
-margin: 15px 0;
 line-height: 23px;
+padding-bottom: 8px;
+padding-bottom: 28px;
+text-align: justify;
+}
+
+.buttom-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 38px;
+  background-color: #333333;
+  bottom: 0px;
+  left: 0px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
