--- a/src/app/components/great-card/great-card.component.css
+++ b/src/app/components/great-card/great-card.component.css
@@ -2,22 +2,22 @@
   display: flex;
 }
 
-.big_card-left{
+.big_card-left {
   margin-bottom: 35px;
 }
 
 .block-left-card {
   padding: 20px;
-  width: 50vw;
+  width: 54vw;
   min-width: 50vw;
 }
 
 .block-rigth-card {
   padding: 20px;
-  width: 50vw;
+  width: 46vw;
 }
 
-.great-card-img > img {
+.great-card-img>img {
   border-radius: 7px;
   width: 100%;
 }
@@ -26,6 +26,38 @@
   margin: 8px 0;
 }
 
-.great-card-description > a{
+.great-card-description>a {
   color: grey;
+}
+
+@media (max-width: 890px) {
+  .block-left-card {
+    width: 60vw;
+  }
+
+  .block-rigth-card {
+    width: 40vw;
+  }
+
+}
+
+@media (max-width: 470px) {
+  .conatiner_great-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+  .block-left-card {
+    width: 100%;
+  }
+
+  .block-rigth-card {
+    width: 100%;
+  }
+
+  .big_card-left {
+    margin-bottom: 10px;
+  }
 }
