ajustes de tamanhos de texto aplicado

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   background-color: #111111;
   color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', sans-serif;
   text-decoration: none;
   list-style: none;
 }
