--- a/src/app/components/informative-card/informative-card.component.css
+++ b/src/app/components/informative-card/informative-card.component.css
@@ -17,12 +17,12 @@
 }
 
 .container_informative-card>h2>a {
-  font-size: 14px;
+  margin-top: 4px;
+  font-size: 16px;
 }
 
 .container_informative-card>h2 {
   line-height: 17px;
-  font-size: 14px;
 }
 
 @media (max-width: 890px) {
