--- a/src/app/components/title-card/title-card.component.css
+++ b/src/app/components/title-card/title-card.component.css
@@ -1,11 +1,19 @@
-.container-title-card{
+.container-title-card {
   color: white;
-    font-size: 7vw;
-    text-align: center;
-    margin: 7px 0px;
+  font-size: 7vw;
+  text-align: center;
+  margin: 7px 0px;
+  font-weight: 600;
 }
+
 .line {
   width: 100%;
   height: 1px;
   background-color: white;
+}
+
+@media (max-width: 470px) {
+  .container-title-card {
+    font-size: 9vw;
+  }
 }
